--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         </div>
       </div>
     </section>
-    <!-- About Sectiton End -->
+    <!-- About Sectiton End. -->
 
     <script src="dist/js/script.js"></script>
   </body>
