--- a/index.html
+++ b/index.html
@@ -66,16 +66,9 @@
                 </li>
                 <li class="group">
                   <a
-                    href="#portfolio"
+                    href="#portofolio"
                     class="text-base text-black py-2 mx-8 flex group-hover:text-slate-600"
                     >Portofolio</a
-                  >
-                </li>
-                <li class="group">
-                  <a
-                    href="#clients"
-                    class="text-base text-black py-2 mx-8 flex group-hover:text-slate-600"
-                    >Clients</a
                   >
                 </li>
                 <li class="group">
@@ -169,7 +162,7 @@
             <h2
               class="font-bold text-slate-900 text-3xl mb-5 max-w-md lg:text-4xl"
             >
-              Lets Me Introduce My Self
+              Let Me Introduce My Self
             </h2>
             <p class="font-medium text-base text-slate-800 max-w-xl lg:text-lg">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
@@ -254,6 +247,95 @@
       </div>
     </section>
     <!-- About Sectiton End. -->
+
+    <!-- Portofolio Section start -->
+    <section id="portofolio" class="pt-36 pb-16 bg-slate-200">
+      <div class="container">
+        <div class="w-full px-4">
+          <div class="max-w-xl mx-auto text-center mb-16">
+            <h4 class="font-semibold text-lg text-slate-900 mb-2">
+              Portofolio
+            </h4>
+            <h2 class="font-bold text-slate-800 text-3xl mb-4">My Project</h2>
+            <p class="font-medium text-base text-slate-700">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci
+              at ipsum ex sint tenetur voluptate placeat accusantium eum nostrum
+              laboriosam!
+            </p>
+          </div>
+        </div>
+
+        <div
+          class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto"
+        >
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="/dist/img/Portofolio/1.png"
+                alt="Landing Page"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
+              Coming Soon Project
+            </h3>
+            <p class="font-medium text-base text-slate-700">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+              sequi cumque accusantium.
+            </p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="/dist/img/Portofolio/comingsoon.png"
+                alt="Coming Soon Project"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
+              Coming Soon Project
+            </h3>
+            <p class="font-medium text-base text-slate-700">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+              sequi cumque accusantium.
+            </p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="/dist/img/Portofolio/comingsoon.png"
+                alt="Coming Soon Project"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
+              Coming Soon Project
+            </h3>
+            <p class="font-medium text-base text-slate-700">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+              sequi cumque accusantium.
+            </p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="/dist/img/Portofolio/comingsoon.png"
+                alt="Landing Page"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
+              Coming Soon Project
+            </h3>
+            <p class="font-medium text-base text-slate-700">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+              sequi cumque accusantium.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Portofolio Section End  -->
 
     <script src="dist/js/script.js"></script>
   </body>
