--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
         </div>
 
         <div class="w-full pt-10 border-t border-slate-700">
-          <div class="flex items-center mb-5">
+          <div class="flex justify-center mb-5">
             <!-- facebook -->
             <a
               href="https://web.facebook.com/yuma.nuralfath"
