--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
               <img
-                src="https://source.unsplash.com/360x200?anime+japanese+culture"
+                src="https://source.unsplash.com/360x200?anime+japanese"
                 alt="Anime"
                 class="w-full"
               />
