--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
         </div>
       </div>
     </footer>
-    <!-- Footer Section End -->
+    <!-- Footer Section end -->
 
     <script src="dist/js/script.js"></script>
   </body>
