--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
               <textarea
                 type="text"
                 id="Message"
-                class="w-full bg-white text-black p-3 rounded-md focus:outline-none focus:ring-slate-800 focus:ring-1 focus:border-slate-800 h-32"
+                class="w-full bg-white text-slate-950 p-3 rounded-md focus:outline-none focus:ring-slate-800 focus:ring-1 focus:border-slate-800 h-32"
               >
               </textarea>
             </div>
@@ -533,7 +533,7 @@
     <!-- Contact Section End -->
 
     <!-- Footer Section Start -->
-    <footer class="bg-black pt-24 pb-12">
+    <footer class="bg-slate-950 pt-24 pb-12">
       <div class="container">
         <div class="flex flex-warp justify-center">
           <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/3">
