--- a/index.html
+++ b/index.html
@@ -535,16 +535,17 @@
     <!-- Footer Section Start -->
     <footer class="bg-slate-950 pt-24 pb-12">
       <div class="container">
-        <div class="flex flex-warp justify-center">
-          <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/3">
-            <h2 class="font-bold text-2xl text-white mb-5">Alfath.Inc</h2>
-            <h3 class="font-bold text-xl mb-2">Contact Me</h3>
+        <div class="flex flex-warp">
+          <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
+            <h2 class="mb-5 text-4xl font-bold text-white">Alfath.Inc</h2>
+            <h3 class="mb-2 text-2xl font-bold">Contact Me</h3>
             <p>yumanuralfath2@gmail.com</p>
             <p>Jl.Sawit No.23 RT.004/RW.009 Kel.Limbungan Kec.Rumbai Timur</p>
             <p>Pekanbaru</p>
           </div>
-          <div class="w-full px-4 mb-12 md:w-1/3">
-            <h3 class="font-semibold text-xl text-white mb-5">
+
+          <div class="mb-12 w-full px-4 md:w-1/3">
+            <h3 class="mb-5 text-xl font-semibold text-white">
               Category Article
             </h3>
             <ul class="text-slate-200">
