--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               </a>
               <!-- Github -->
               <a
-                href="https://github.com/Yumana20"
+                href="https://github.com/yumanuralfath"
                 target="_blank"
                 class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-secondary text-black hover:border-primary hover: bg-primary hover:text-white"
               >
@@ -666,7 +666,7 @@
             </a>
             <!-- Github -->
             <a
-              href="https://github.com/Yumana20"
+              href="https://github.com/yumanuralfath"
               target="_blank"
               class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-secondary text-black hover:border-primary hover: bg-primary hover:text-white"
             >
